[APP-2868] Add support for header/main content style placeholder

--- a/streamlit_sal/templates/_style-builder.scss
+++ b/streamlit_sal/templates/_style-builder.scss
@@ -58,3 +58,11 @@ img[data-testid="stLogo"] {
 div[data-testid="stToast"] {
   @extend %sal-toast !optional;
 }
+
+div.stApp > header {
+  @extend %streamlit-app-header !optional;
+}
+
+section.main > div.block-container {
+  @extend %streamlit-app-view-block !optional;
+}
