--- a/streamlit_sal/sass/_streamlit-component-map.scss
+++ b/streamlit_sal/sass/_streamlit-component-map.scss
@@ -289,7 +289,7 @@ $element-container-components: (
   sal-exception: (
     container: $next_sibling,
     default: $notification,
-    messag: '+ div div.message',
+    message: '+ div div.message',
   ),
   sal-progress: (
     container: $next_sibling,
